Use flex to correct the alignment of elements when wrapping.

--- a/themes/bootstrap3/less/bootstrap.less
+++ b/themes/bootstrap3/less/bootstrap.less
@@ -119,6 +119,10 @@ footer {
     padding-right: 0;
   }
 }
+.flex { display: flex; }
+.rtl .flex { flex-direction: row-reverse; }
+.flex-col { flex: 0 1 100%; }
+.flex-none { flex: none; }
 
 /* ------ Form Errors ------ */
 .has-error {margin-bottom: 0;}
@@ -232,6 +236,7 @@ footer {
   &:hover,
   &:focus { background-color: @nav-link-hover-bg; }
 }
+.myresearch-menu .flex { display: flex; }
 .myresearch-menu a:hover {
   background-color: @gray-lighter;
   outline: dotted 1px #000;
